--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,10 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+
+# SwiftPM
+.DS_Store
+/.build
+/Packages
+/*.xcodeproj
