--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -74,6 +74,7 @@ included:
 
 excluded:
 - Tests/LinuxMain.swift
+- Sources/ProjLint/.testResources
 
 # Rule Configurations
 conditional_returns_on_newline:
@@ -121,7 +122,7 @@ type_contents_order:
 custom_rules:
   closing_brace_whitespace:
     included: ".*.swift"
-    regex: '(?:\n| {2,})\}\)? *\n *[^ \n\})\]s#]'
+    regex: '(?:\n| {2,})\}\)? *\n *[^ \n\})\]s#""]'
     name: "Closing Brace Whitespace"
     message: "Empty line required after closing curly braces if code with same indentation follows."
     severity: warning
